--- a/app/src/main/res/layout/activity_new_article_link.xml
+++ b/app/src/main/res/layout/activity_new_article_link.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".ui.new_article_link.NewArticleLinkActivity"
-    android:background="@color/white">
+    tools:context=".ui.new_article_link.NewArticleLinkActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,29 +13,23 @@
         android:background="@color/white">
 
         <TextView
+            style="@style/Text.NanumR.17s"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textSize="17sp"
-            android:textColor="@color/black"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:includeFontPadding="false"
-            android:text="@string/new_article_link_title"/>
+            android:text="@string/new_article_link_title" />
     </RelativeLayout>
-    
+
     <View
         android:layout_width="match_parent"
         android:layout_height="0.3dp"
-        android:background="#d1d1d1"/>
+        android:background="#d1d1d1" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_new_article_link"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp">
-
-
-    </androidx.recyclerview.widget.RecyclerView>
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp" />
 </LinearLayout>
