--- a/app/src/main/res/layout/activity_signup_start.xml
+++ b/app/src/main/res/layout/activity_signup_start.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.signup.signup_start.SignupStartActivity"
-    android:background="@color/white">
+    android:background="@color/white"
+    tools:context=".ui.signup.signup_start.SignupStartActivity">
 
     <ImageView
         android:id="@+id/img_act_signup_start_logo"
@@ -17,42 +17,46 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <RelativeLayout
-        android:id="@+id/relative_act_signup_start_email_login"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="148dp"
-        android:layout_marginEnd="85dp"
-        android:background="@drawable/round_email_login_background"
+        android:layout_marginTop="48dp"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_act_signup_start_logo">
+        app:layout_constraintTop_toBottomOf="@id/relative_act_signup_start_facebook_login">
 
-        <ImageView
-            android:id="@+id/img_ic_mail"
+        <LinearLayout
+            android:id="@+id/linear_act_signup_go_to_login_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="17dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:src="@drawable/ic_mail" />
+            android:layout_gravity="center"
+            android:orientation="vertical"
+            android:paddingLeft="20dp"
+            android:paddingTop="6dp"
+            android:paddingRight="20dp"
+            android:paddingBottom="20dp">
+
+            <TextView
+                style="@style/Text.NanumL.14s"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="로그인 하기" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="-2dp"
+                android:background="#242424" />
+        </LinearLayout>
 
         <TextView
+            style="@style/Text.NanumL.12s"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="26dp"
-            android:layout_toRightOf="@id/img_ic_mail"
-            android:fontFamily="@font/nanum_barungothic_light"
-            android:includeFontPadding="false"
-            android:text="이메일로 시작하기"
-            android:textColor="#242424"
-            android:textSize="14sp" />
-
-    </RelativeLayout>
+            android:layout_gravity="center_horizontal"
+            android:text="이미 회원이시면," />
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/relative_act_signup_start_facebook_login"
@@ -79,66 +83,45 @@
             android:src="@drawable/ic_facebook" />
 
         <TextView
+            style="@style/Text.NanumL.14s.21h.White"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_marginLeft="26dp"
             android:layout_toRightOf="@id/img_ic_facebook"
-            android:fontFamily="@font/nanum_barungothic_light"
-            android:includeFontPadding="false"
-            android:text="페북으로 시작하기"
-            android:textColor="#ffffff"
-            android:textSize="14sp" />
-
+            android:text="페북으로 시작하기" />
     </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/relative_act_signup_start_email_login"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:orientation="vertical"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="148dp"
+        android:layout_marginEnd="85dp"
+        android:background="@drawable/round_email_login_background"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/relative_act_signup_start_facebook_login">
+        app:layout_constraintTop_toBottomOf="@+id/img_act_signup_start_logo">
+
+        <ImageView
+            android:id="@+id/img_ic_mail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="17dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:src="@drawable/ic_mail" />
 
         <TextView
+            style="@style/Text.NanumL.14s"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="이미 회원이시면,"
-            android:textColor="#242424"
-            android:textSize="12sp"
-            android:fontFamily="@font/nanum_barungothic_light"
-            android:includeFontPadding="false"
-            android:layout_gravity="center_horizontal"/>
-
-        <LinearLayout
-            android:id="@+id/linear_act_signup_go_to_login_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingTop="6dp"
-            android:paddingRight="20dp"
-            android:paddingLeft="20dp"
-            android:paddingBottom="20dp"
-            android:layout_gravity="center">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="로그인 하기"
-                android:textSize="14sp"
-                android:textColor="#242424"
-                android:fontFamily="@font/nanum_barungothic_light"
-                android:includeFontPadding="false"/>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#242424"
-                android:layout_marginTop="-2dp"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="26dp"
+            android:layout_toRightOf="@id/img_ic_mail"
+            android:text="이메일로 시작하기" />
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
