--- a/app/src/main/res/layout/activity_archive.xml
+++ b/app/src/main/res/layout/activity_archive.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
-    android:layout_width="match_parent" android:layout_height="match_parent" android:background="#d1d1d1">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#d1d1d1"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -9,31 +12,26 @@
 
         <TextView
             android:id="@+id/tv_archive_category_title"
+            style="@style/Text.NanumR.17s"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="UX 디자인"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:includeFontPadding="false"
-            android:textSize="17sp"
-            android:textColor="#000000"
-            android:layout_centerInParent="true"/>
-
+            android:layout_centerInParent="true"
+            android:text="UX 디자인" />
     </RelativeLayout>
 
     <View
-        android:background="#d1d1d1"
         android:layout_width="match_parent"
-        android:layout_height="0.6dp" />
+        android:layout_height="0.6dp"
+        android:background="#d1d1d1" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_archive"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <include
         android:id="@+id/empty_view_act_archive"
-        android:visibility="visible"
-        layout="@layout/search_result_empty" />
-
+        layout="@layout/search_result_empty"
+        android:visibility="visible" />
 </LinearLayout>
