--- a/app/src/main/res/layout/activity_artic_pick.xml
+++ b/app/src/main/res/layout/activity_artic_pick.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".ui.detail_artic_pick.ArticPickActivity"
-    android:background="@color/white">
+    tools:context=".ui.detail_artic_pick.ArticPickActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,17 +13,13 @@
         android:background="@color/white">
 
         <TextView
+            style="@style/Text.NanumR.17s.19h"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textSize="17sp"
-            android:textColor="@color/black"
-            android:includeFontPadding="false"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:lineSpacingExtra="2sp"
-            android:text="@string/artic_pick_title"/>
+            android:text="@string/artic_pick_title" />
     </RelativeLayout>
-    
+
     <View
         android:layout_width="match_parent"
         android:layout_height="0.3dp"
@@ -35,10 +29,7 @@
         android:id="@+id/rv_artic_pick"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
-
-
-    </androidx.recyclerview.widget.RecyclerView>
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp" />
 </LinearLayout>
