--- a/app/src/main/res/layout/activity_article.xml
+++ b/app/src/main/res/layout/activity_article.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.article.ArticleActivity"
     android:background="#f2f2f2"
-    >
+    tools:context=".ui.article.ArticleActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,96 +19,55 @@
 
             <TextView
                 android:id="@+id/tv_act_link_archive_title"
+                style="@style/Text.NanumR.17s.19h"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="UX / UI"
-                android:textSize="17sp"
-                android:textColor="#000000"
-                android:lineSpacingExtra="2sp"
-                android:fontFamily="@font/nanum_barungothic_regular"
-                android:includeFontPadding="false"/>
-
+                android:text="UX / UI" />
         </RelativeLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.3dp"
-            android:background="#d1d1d1"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#f2f2f2"
-            >
-        <TextView
-            android:id="@+id/link_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:layout_marginTop="32dp"
-            android:layout_toStartOf="@id/link_btn_scrap"
-            android:layout_marginBottom="32dp"
-            android:layout_marginRight="67dp"
-            android:layout_marginLeft="28dp"
-            android:layout_alignParentStart="true"
-            android:fontFamily="@font/nanum_barungothic_light"
-            android:textSize="21sp"
-            android:includeFontPadding="false"
-            android:text="PM과 디자이너가 원활하게 소통하는 법을 알려주세요"
-            android:letterSpacing="-0.02"
-            android:lineSpacingExtra="7sp"
-            />
+            android:background="#f2f2f2">
+
+            <TextView
+                android:id="@+id/link_title"
+                style="@style/Text.NanumR.21s.28h"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="28dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginRight="67dp"
+                android:layout_marginBottom="32dp"
+                android:layout_toStartOf="@id/link_btn_scrap"
+                tools:text="PM과 디자이너가 원활하게 소통하는 법을 알려주세요" />
 
             <ToggleButton
                 android:id="@+id/link_btn_scrap"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:background="@drawable/toggle_btn_scrap"
-                android:textOff=""
-                android:textOn=""
-                android:checked="false"
+                android:layout_alignParentRight="true"
                 android:layout_marginTop="34dp"
                 android:layout_marginRight="19.5dp"
+                android:background="@drawable/toggle_btn_scrap"
+                android:checked="false"
                 android:src="@drawable/btn_scrap_blue"
-               android:layout_alignParentRight="true"/>
-
+                android:textOff=""
+                android:textOn="" />
         </RelativeLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_link_list"
+        <View
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:visibility="gone"/>
+            android:layout_height="0.3dp"
+            android:background="#d1d1d1" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/empty_view_act_article"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#ffffff">
-
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="127dp"
-                android:layout_marginTop="178dp"
-                android:layout_marginEnd="127dp"
-                android:layout_marginBottom="214dp"
-                android:fontFamily="@font/nanum_barungothic_regular"
-                android:includeFontPadding="false"
-                android:text="검색 결과가 없어요"
-                android:textColor="@color/brownish_grey"
-                android:textSize="14sp"
-                app:layout_constraintBottom_toTopOf="@+id/imageView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/imageView"
@@ -125,7 +80,28 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:srcCompat="@drawable/empty_character" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </LinearLayout>
 
+            <TextView
+                android:id="@+id/textView2"
+                style="@style/Text.NanumR.14s.23h.BrownishGrey"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="127dp"
+                android:layout_marginTop="178dp"
+                android:layout_marginEnd="127dp"
+                android:layout_marginBottom="214dp"
+                android:text="검색 결과가 없어요"
+                app:layout_constraintBottom_toTopOf="@+id/imageView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_link_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:visibility="gone" />
+    </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
