--- a/app/src/main/res/layout/activity_article_web_view.xml
+++ b/app/src/main/res/layout/activity_article_web_view.xml
@@ -6,17 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.article_webview.ArticleWebViewActivity">
 
-    <im.delight.android.webview.AdvancedWebView
-        android:id="@+id/wv_article_web_view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </im.delight.android.webview.AdvancedWebView>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="0dp"
@@ -49,4 +38,12 @@
             app:srcCompat="@drawable/toggle_btn_like_white" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <im.delight.android.webview.AdvancedWebView
+        android:id="@+id/wv_article_web_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
