--- a/app/src/main/res/layout/activity_detail_new_archive.xml
+++ b/app/src/main/res/layout/activity_detail_new_archive.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#d1d1d1"
     android:orientation="vertical"
-    tools:context=".ui.detail_new_archive.DetailNewArchiveActivity"
-    android:background="#d1d1d1">
+    tools:context=".ui.detail_new_archive.DetailNewArchiveActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,27 +13,21 @@
         android:background="@color/white">
 
         <TextView
+            style="@style/Text.NanumR.17s.19h"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="새로운 아카이브"
-            android:textSize="17sp"
-            android:textColor="#000000"
-            android:fontFamily="@font/nanum_barungothic_regular"
             android:layout_centerInParent="true"
-            android:includeFontPadding="false"/>
-
+            android:text="새로운 아카이브"
+            android:textColor="#000000" />
     </RelativeLayout>
 
     <View
-        android:background="#d1d1d1"
         android:layout_width="match_parent"
-        android:layout_height="0.6dp" />
+        android:layout_height="0.6dp"
+        android:background="#d1d1d1" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_detail_new_archive_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
+        android:layout_height="match_parent" />
 </LinearLayout>
