--- a/app/src/main/res/layout/activity_detail_reading_history.xml
+++ b/app/src/main/res/layout/activity_detail_reading_history.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,35 +12,27 @@
         android:background="@color/white">
 
         <TextView
+            style="@style/Text.NanumR.17s.19h"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="최근 읽은 아티클"
-            android:textSize="17sp"
-            android:textColor="#000000"
-            android:fontFamily="@font/nanum_barungothic_regular"
             android:layout_centerInParent="true"
-            android:includeFontPadding="false"/>
-
+            android:includeFontPadding="false"
+            android:text="최근 읽은 아티클" />
     </RelativeLayout>
 
     <View
-        android:background="#d1d1d1"
         android:layout_width="match_parent"
-        android:layout_height="0.6dp" />
+        android:layout_height="0.6dp"
+        android:background="#d1d1d1" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_act_detail_reading_history"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        >
-
-    </androidx.recyclerview.widget.RecyclerView>
+        android:visibility="gone" />
 
     <include
-        android:visibility="visible"
         android:id="@+id/empty_view_act_detail_reading_history"
         layout="@layout/search_result_empty"
-        />
-
+        android:visibility="visible" />
 </LinearLayout>
