--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -6,47 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".ui.reset_password.FindPasswordActivity">
 
-    <View
-        android:id="@+id/line"
-        android:layout_width="match_parent"
-        android:layout_height="0.3dp"
-        android:background="#d1d1d1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="64dp"/>
-
-
     <LinearLayout
         android:id="@+id/info_pw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="32dp"
+        android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/line"
-        android:layout_marginTop="32dp"
-        android:layout_marginLeft="20dp"
-        android:gravity="center">
+        app:layout_constraintTop_toBottomOf="@id/line">
 
         <TextView
+            style="@style/Text.NanumB.21s"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="비밀번호"
-            android:textColor="#000000"
-            android:textSize="21sp"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:textStyle="bold"
-            android:includeFontPadding="false"/>
+            android:text="비밀번호" />
 
         <TextView
+            style="@style/Text.NanumL.21s"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="를 잊어버리셨군요!"
-            android:textColor="#000000"
-            android:textSize="21sp"
-            android:fontFamily="@font/nanum_barungothic_light"
-            android:includeFontPadding="false"/>
-
+            android:text="를 잊어버리셨군요!" />
     </LinearLayout>
 
     <LinearLayout
@@ -61,75 +42,69 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/info_pw">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:includeFontPadding="false"
-            android:text="가입한 이메일"
-            android:textColor="#000000"
-            android:textSize="16sp" />
-
         <EditText
             android:id="@+id/et_act_find_pw_email"
+            style="@style/Text.NanumR.14s.23h.BrownishGrey"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:fontFamily="@font/nanum_barungothic_regular"
             android:hint="artic@gmail.com"
-            android:includeFontPadding="false"
-            android:lineSpacingExtra="2sp"
-            android:textColor="#707070"
-            android:textSize="14sp"
-            android:theme="@style/EditTheme"
-            android:singleLine ="true"/>
+            android:singleLine="true"
+            android:theme="@style/EditTheme" />
+
+        <TextView
+            style="@style/Text.NanumR.16s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="가입한 이메일" />
 
     </LinearLayout>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_act_find_pw_get_auth_code"
-        android:layout_width="match_parent"
-        android:layout_height="37dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="147dp"
-        android:layout_marginEnd="80dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        android:background="@drawable/btn_login"
-        android:text="인증번호 받기"
-        android:textColor="@color/white"
-        android:textSize="14sp"
-        android:fontFamily="@font/nanum_barungothic_regular"
-        android:includeFontPadding="false"/>
 
     <LinearLayout
         android:id="@+id/linear_act_find_pw_back_to_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="26dp"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_act_find_pw_get_auth_code"
-        android:orientation="vertical"
-        android:layout_marginTop="26dp"
-        android:layout_gravity="center">
+        app:layout_constraintTop_toBottomOf="@+id/btn_act_find_pw_get_auth_code">
 
         <TextView
+            style="@style/Text.NanumL.14s"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="로그인으로 돌아가기"
-            android:textSize="14sp"
-            android:textColor="#242424"
-            android:fontFamily="@font/nanum_barungothic_light"
-            android:includeFontPadding="false"/>
+            android:text="로그인으로 돌아가기" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#242424"
-            android:layout_marginTop="-2dp"/>
-
+            android:layout_marginTop="-2dp"
+            android:background="#242424" />
     </LinearLayout>
 
+    <View
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="0.3dp"
+        android:layout_marginTop="64dp"
+        android:background="#d1d1d1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_act_find_pw_get_auth_code"
+        style="@style/Text.NanumR.14s.23h.White"
+        android:layout_width="match_parent"
+        android:layout_height="37dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="147dp"
+        android:layout_marginEnd="80dp"
+        android:background="@drawable/btn_login"
+        android:text="인증번호 받기"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
