--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.login.login.LoginActivity"
-    android:background="@color/white">
+    android:background="@color/white"
+    tools:context=".ui.login.login.LoginActivity">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -19,43 +19,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/linear_email"
-        android:layout_width="match_parent"
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="56dp"
-        android:layout_marginEnd="20dp"
-        android:orientation="vertical"
+        android:src="@drawable/login_character"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:includeFontPadding="false"
-            android:text="이메일"
-            android:textColor="#000000"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/et_login_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:hint="artic@gmail.com"
-            android:textSize="14sp"
-            android:textColor="#000000"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:includeFontPadding="false"
-            android:lineSpacingExtra="2sp"
-            android:theme="@style/EditTheme"
-            android:singleLine ="true"
-            android:nextFocusDown="@id/et_login_password"/>
-
-    </LinearLayout>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -69,83 +39,89 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linear_email">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:includeFontPadding="false"
-            android:text="비밀번호"
-            android:textColor="#000000"
-            android:textSize="16sp" />
-
         <EditText
             android:id="@+id/et_login_password"
+            style="@style/Text.NanumR.14s.23h.BrownishGrey"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:fontFamily="@font/nanum_barungothic_regular"
             android:hint="영문, 숫자 포함 8 자리 이상"
-            android:includeFontPadding="false"
             android:inputType="textPassword"
-            android:lineSpacingExtra="2sp"
-            android:textColor="#707070"
-            android:textSize="14sp"
-            android:theme="@style/EditTheme"
-            android:singleLine ="true"/>
+            android:singleLine="true"
+            android:theme="@style/EditTheme" />
 
+        <TextView
+            style="@style/Text.NanumR.16s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="비밀번호" />
     </LinearLayout>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_login_complete"
-        android:layout_width="match_parent"
-        android:layout_height="37dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="41dp"
-        android:layout_marginEnd="80dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        android:background="@drawable/btn_login"
-        android:text="로그인"
-        android:textColor="@color/white"
-        android:textSize="14sp"
-        android:fontFamily="@font/nanum_barungothic_regular"
-        android:includeFontPadding="false"/>
 
     <LinearLayout
         android:id="@+id/linear_act_login_start_go_to_signup_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="26dp"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login_complete"
-        android:orientation="vertical"
-        android:layout_marginTop="26dp"
-        android:layout_gravity="center">
+        app:layout_constraintTop_toBottomOf="@+id/btn_login_complete">
 
         <TextView
+            style="@style/Text.NanumL.14s"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="비밀번호를 잊어버리셨나요?"
-            android:textSize="14sp"
-            android:textColor="#242424"
-            android:fontFamily="@font/nanum_barungothic_light"
-            android:includeFontPadding="false"/>
+            android:text="비밀번호를 잊어버리셨나요?" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#242424"
-            android:layout_marginTop="-2dp"/>
-
+            android:layout_marginTop="-2dp"
+            android:background="#242424" />
     </LinearLayout>
 
-    <ImageView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linear_email"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="20dp"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/login_character"/>
+        app:layout_constraintTop_toBottomOf="@+id/imageView2">
 
+        <EditText
+            android:id="@+id/et_login_email"
+            style="@style/Text.NanumR.14s"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:hint="artic@gmail.com"
+            android:nextFocusDown="@id/et_login_password"
+            android:singleLine="true"
+            android:theme="@style/EditTheme" />
+
+        <TextView
+            style="@style/Text.NanumR.16s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="이메일" />
+    </LinearLayout>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_login_complete"
+        style="@style/Text.NanumR.14s.23h.White"
+        android:layout_width="match_parent"
+        android:layout_height="37dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="41dp"
+        android:layout_marginEnd="80dp"
+        android:background="@drawable/btn_login"
+        android:text="로그인"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
