--- a/app/src/main/res/layout/activity_login_start.xml
+++ b/app/src/main/res/layout/activity_login_start.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.login.login_start.LoginStartActivity"
-    android:background="@color/white">
+    android:background="@color/white"
+    tools:context=".ui.login.login_start.LoginStartActivity">
 
     <ImageView
         android:id="@+id/img_act_login_start_logo"
@@ -17,49 +17,42 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <RelativeLayout
-        android:id="@+id/btn_login_start_email_login"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="148dp"
-        android:layout_marginEnd="85dp"
-        android:background="@drawable/round_email_login_background"
+        android:layout_marginTop="48dp"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_act_login_start_logo">
+        app:layout_constraintTop_toBottomOf="@id/btn_login_start_facebook_login">
 
         <LinearLayout
+            android:id="@+id/linear_act_login_start_go_to_signup_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_centerInParent="true">
-
-            <ImageView
-                android:id="@+id/img_ic_mail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_mail" />
+            android:layout_gravity="center"
+            android:layout_marginTop="6dp"
+            android:orientation="vertical">
 
             <TextView
+                style="@style/Text.NanumL.14s"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="26dp"
-                android:fontFamily="@font/nanum_barungothic_light"
-                android:includeFontPadding="false"
-                android:text="이메일로 로그인"
-                android:textColor="#242424"
-                android:textSize="14sp"/>
+                android:text="회원가입 하기" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="-2dp"
+                android:background="#242424" />
         </LinearLayout>
 
-
-
-    </RelativeLayout>
+        <TextView
+            style="@style/Text.NanumL.12s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="아직 회원이 아니신가요?" />
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/btn_login_start_facebook_login"
@@ -77,12 +70,12 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_centerInParent="true"
             android:layout_marginStart="23dp"
             android:layout_marginTop="3dp"
             android:layout_marginBottom="4dp"
             android:gravity="center_vertical"
-            android:layout_centerInParent="true">
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/img_ic_facebook"
@@ -91,74 +84,48 @@
                 android:src="@drawable/ic_facebook" />
 
             <TextView
+                style="@style/Text.NanumL.14s.21h.White"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="26dp"
-                android:fontFamily="@font/nanum_barungothic_light"
-                android:includeFontPadding="false"
-                android:text="페이스북 로그인"
-                android:textColor="@color/white"
-                android:textSize="14sp" />
-
+                android:text="페이스북 로그인" />
         </LinearLayout>
-
-
     </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/btn_login_start_email_login"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:orientation="vertical"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="148dp"
+        android:layout_marginEnd="85dp"
+        android:background="@drawable/round_email_login_background"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_login_start_facebook_login">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="아직 회원이 아니신가요?"
-            android:textColor="#242424"
-            android:textSize="12sp"
-            android:fontFamily="@font/nanum_barungothic_light"
-            android:includeFontPadding="false"/>
+        app:layout_constraintTop_toBottomOf="@+id/img_act_login_start_logo">
 
         <LinearLayout
-            android:id="@+id/linear_act_login_start_go_to_signup_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="6dp"
-            android:layout_gravity="center">
+            android:layout_centerInParent="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-            <TextView
+            <ImageView
+                android:id="@+id/img_ic_mail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="회원가입 하기"
-                android:textSize="14sp"
-                android:textColor="#242424"
-                android:fontFamily="@font/nanum_barungothic_light"
-                android:includeFontPadding="false"/>
+                android:src="@drawable/ic_mail" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#242424"
-                android:layout_marginTop="-2dp"/>
-
+            <TextView
+                style="@style/Text.NanumL.14s"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="26dp"
+                android:text="이메일로 로그인" />
         </LinearLayout>
-
-    </LinearLayout>
-
-    <!--<com.kakao.usermgmt.LoginButton-->
-        <!--android:id="@+id/btn_kakao_login"-->
-        <!--android:layout_width="100dp"-->
-        <!--android:layout_height="100dp"-->
-        <!--android:layout_marginStart="120dp"-->
-        <!--android:layout_marginTop="36dp"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toTopOf="parent">-->
-
-    <!--</com.kakao.usermgmt.LoginButton>-->
-
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
