--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,117 +4,101 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     android:orientation="vertical"
-    tools:context=".ui.search.SearchActivity"
-    android:background="#ffffff">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:background="#ffffff">
-
-    </RelativeLayout>
-
-    <View
-        android:background="#d1d1d1"
-        android:layout_width="match_parent"
-        android:layout_height="0.6dp" />
+    tools:context=".ui.search.SearchActivity">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="30dp"
+        android:orientation="vertical">
 
         <TextView
+            style="@style/Text.NanumL.21s"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="무엇을"
-            android:textSize="21sp"
-            android:textColor="#000000"
-            android:fontFamily="@font/nanum_barungothic_light"
-            android:includeFontPadding="false"/>
+            android:text="무엇을" />
 
         <TextView
+            style="@style/Text.NanumB.21s"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="찾고 계신가요?"
-            android:textSize="21sp"
-            android:textColor="#000000"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:textStyle="bold"
-            android:includeFontPadding="false"
-            android:layout_marginTop="8dp"/>
-
+            android:layout_marginTop="8dp"
+            android:text="찾고 계신가요?" />
     </LinearLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:background="#ffffff" />
+
+    <TextView
+        style="@style/Text.NanumB.14s"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="26dp"
+        android:layout_marginTop="27dp"
+        android:text="추천 검색어" />
+
     <View
-        android:background="#d1d1d1"
         android:layout_width="match_parent"
         android:layout_height="0.6dp"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:background="#d1d1d1" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.6dp"
+        android:background="#d1d1d1" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@drawable/search_search_round"
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="26dp"
         android:layout_marginEnd="20dp"
-        android:id="@+id/constraintLayout">
+        android:background="@drawable/search_search_round">
 
         <EditText
             android:id="@+id/et_act_search_search_word"
+            style="@style/Text.NanumR.14s"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="46dp"
             android:layout_marginEnd="20dp"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:includeFontPadding="false"
+            android:background="@null"
             android:hint="검색어를 입력하세요"
-            android:textColor="@color/black"
-            android:textSize="14sp"
+            android:imeOptions="actionSearch"
+            android:inputType="text"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
-            android:background="@null"
-            android:imeOptions="actionSearch"
-            android:inputType="text"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"/>
+            app:layout_constraintVertical_bias="1.0" />
+
         <ImageView
-            android:src="@drawable/ic_search"
+            android:id="@+id/imageView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/imageView3" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="13dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="13dp"
+            android:src="@drawable/ic_search"
             app:layout_constraintBottom_toBottomOf="parent"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-    
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="추천 검색어"
-        android:textSize="14sp"
-        android:textColor="#242424"
-        android:fontFamily="@font/nanum_barungothic_bold"
-        android:layout_marginLeft="26dp"
-        android:layout_marginTop="27dp"/>
-s
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_search_recommend_word"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
-        android:layout_marginTop="17dp"
         android:layout_marginLeft="22dp"
-        android:layout_marginRight="20dp">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
+        android:layout_marginTop="17dp"
+        android:layout_marginRight="20dp"
+        android:paddingBottom="10dp" />
 </LinearLayout>
