--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,67 +10,47 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:background="@color/white">
-
-    </RelativeLayout>
-    
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.3dp"
-        android:background="#d1d1d1"/>
+        android:background="@color/white" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="22dp"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:paddingBottom="22dp">
 
-    <TextView
-        android:id="@+id/search_result_category_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="디자인"
-        android:includeFontPadding="false"
-        android:textColor="@color/black"
-        android:fontFamily="@font/nanum_barungothic_regular"
-        android:textStyle="bold"
-        android:textSize="21sp"
-        android:layout_marginTop="28dp"
-        android:layout_marginLeft="20dp" />
+        <TextView
+            android:id="@+id/search_result_category_name"
+            style="@style/Text.NanumB.21s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="28dp"
+            android:text="디자인" />
 
         <TextView
             android:id="@+id/search_result_number"
+            style="@style/Text.NanumB.14s.23h.SoftBlue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/search_result_category_name"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
-            android:fontFamily="@font/nanum_square_regular"
-            android:includeFontPadding="false"
-            android:text="0"
-            android:textColor="@color/soft_blue"
-            android:textStyle="bold" />
+            tools:text="0" />
 
         <TextView
+            style="@style/Text.NanumR.14s"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:includeFontPadding="false"
-            android:fontFamily="@font/nanum_square_regular"
             android:layout_below="@id/search_result_category_name"
+            android:layout_marginTop="10dp"
             android:layout_toRightOf="@id/search_result_number"
-            android:text="개의 검색 결과가 있습니다"/>
+            android:text="개의 검색 결과가 있습니다" />
     </RelativeLayout>
 
-    <com.google.android.material.tabs.TabLayout
-        app:tabIndicatorHeight="0dp"
-        app:tabRippleColor="@null"
-        android:id="@+id/tl_search_result"
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        app:tabGravity="fill"
-        app:tabMode="fixed"/>
+        android:layout_height="0.3dp"
+        android:background="#d1d1d1" />
 
     <View
         android:id="@+id/view2"
@@ -82,9 +61,15 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/search_result_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent" />
 
-    </androidx.viewpager.widget.ViewPager>
-
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tl_search_result"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        app:tabGravity="fill"
+        app:tabIndicatorHeight="0dp"
+        app:tabMode="fixed"
+        app:tabRippleColor="@null" />
 </LinearLayout>
