--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,14 +16,11 @@
         tools:ignore="MissingConstraints">
 
         <TextView
+            style="@style/Text.NanumR.17s"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:includeFontPadding="false"
-            android:text="설정"
-            android:textColor="#000000"
-            android:textSize="17sp" />
+            android:text="설정" />
 
         <View
             android:layout_width="match_parent"
@@ -36,24 +32,7 @@
     <RelativeLayout
         android:id="@+id/setting_edit_profile_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-    <TextView
-        android:id="@+id/setting_edit_profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="233dp"
-        android:layout_marginBottom="15dp"
-        android:fontFamily="@font/nanum_barungothic_light"
-        android:includeFontPadding="false"
-        android:text="프로필 수정"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        />
-
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/setting_edit_profile_btn"
@@ -63,103 +42,91 @@
             android:layout_marginTop="18dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="12dp"
-            android:src="@drawable/btn_setting_rightarrow"
-            />
+            android:src="@drawable/btn_setting_rightarrow" />
 
-
+        <TextView
+            android:id="@+id/setting_edit_profile"
+            style="@style/Text.NanumL.14s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="233dp"
+            android:layout_marginBottom="15dp"
+            android:text="프로필 수정" />
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/setting_version_info_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/setting_version_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginBottom="21dp"
-        android:fontFamily="@font/nanum_barungothic_light"
-        android:includeFontPadding="false"
-        android:text="버전정보"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-         />
 
+        <ImageView
+            android:id="@+id/setting_version_info_btn"
+            android:layout_width="21dp"
+            android:layout_height="21dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="13dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="18dp"
+            android:src="@drawable/btn_setting_rightarrow" />
 
+        <TextView
+            android:id="@+id/setting_version_info"
+            style="@style/Text.NanumL.14s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="21dp"
+            android:text="버전정보" />
 
-    <ImageView
-        android:id="@+id/setting_version_info_btn"
-        android:layout_width="21dp"
-        android:layout_height="21dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="18dp"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/btn_setting_rightarrow"
-        />
-
-    <TextView
-        android:id="@+id/version_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_toLeftOf="@id/setting_version_info_btn"
-        android:fontFamily="@font/nanum_barungothic_light"
-        android:includeFontPadding="false"
-        android:text="1.0.1"
-        android:textColor="#a3a3a3"
-        android:textSize="14sp"
-       />
+        <TextView
+            android:id="@+id/version_number"
+            style="@style/Text.NanumL.14s.21h.BrownishGrey"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginBottom="20dp"
+            android:layout_toLeftOf="@id/setting_version_info_btn"
+            android:text="1.0.1" />
     </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/setting_login_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/setting_login"
+            style="@style/Text.NanumB.14s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:text="로그인" />
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/setting_artic_account_logout"
+        style="@style/Text.NanumL.14s.21h.SoftBlue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingRight="20dp"
+        android:paddingBottom="20dp"
+        android:text="계정 로그아웃" />
+
     <View
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="0.3dp"
         android:background="#d1d1d1"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
-
-    <RelativeLayout
-        android:id="@+id/setting_login_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/setting_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:fontFamily="@font/nanum_barungothic_regular"
-        android:includeFontPadding="false"
-        android:text="로그인"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        android:textStyle="bold"
-         />
-
-
-         />
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/setting_artic_account_logout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="20dp"
-        android:paddingRight="20dp"
-        android:fontFamily="@font/nanum_barungothic_light"
-        android:includeFontPadding="false"
-        android:text="계정 로그아웃"
-        android:textColor="@color/soft_blue"
-        android:textSize="14sp"
-        />
-
 </LinearLayout>
