--- a/app/src/main/res/layout/activity_signup_login.xml
+++ b/app/src/main/res/layout/activity_signup_login.xml
@@ -1,13 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".ui.signup.signup.SignupLoginActivity"
-    android:background="@color/white">
+    tools:context=".ui.signup.signup.SignupLoginActivity">
+
+    <EditText
+        android:id="@+id/signup_login_edit_email"
+        style="@style/Text.NanumL.14s"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="36dp"
+        android:hint="artic@gmail.com"
+        android:nextFocusDown="@id/signup_login_edit_password"
+        android:singleLine="true"
+        android:theme="@style/EditTheme" />
+
+    <EditText
+        android:id="@+id/signup_login_edit_password"
+        style="@style/Text.NanumL.14s"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="36dp"
+        android:hint="영문,숫자 포함 8자리 이상"
+        android:inputType="textPassword"
+        android:singleLine="true"
+        android:theme="@style/EditTheme" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,107 +39,14 @@
 
         <TextView
             android:id="@+id/signup_login_next_txt"
+            style="@style/Text.NanumR.17s.19h.BrownishGrey"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:textColor="#cdcdcd"
-            android:includeFontPadding="false"
-            android:textSize="17sp"
             android:layout_centerVertical="true"
             android:padding="20dp"
-            android:text="다음"/>
-        
+            android:text="다음" />
     </RelativeLayout>
-    
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.3dp"
-        android:background="#d1d1d1"/>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="32dp"
-        android:paddingBottom="74dp"
-        android:paddingLeft="20dp">
-        <TextView
-            android:id="@+id/email_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="이메일"
-            android:includeFontPadding="false"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:textSize="21sp" />
-
-        <TextView
-            android:id="@+id/signup_login_txt1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="과 "
-            android:includeFontPadding="false"
-            android:fontFamily="@font/nanum_barungothic_light"
-            android:textSize="21sp"
-            android:textColor="@color/black"
-            android:layout_toRightOf="@id/email_txt"/>
-        <TextView
-            android:id="@+id/password_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="비밀번호"
-            android:includeFontPadding="false"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:textSize="21sp"
-            android:layout_toRightOf="@id/signup_login_txt1"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/password_txt"
-            android:includeFontPadding="false"
-            android:fontFamily="@font/nanum_barungothic_light"
-            android:textSize="21sp"
-            android:textColor="@color/black"
-            android:text="를"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/email_txt"
-            android:text="알려주세요!"
-            android:includeFontPadding="false"
-            android:fontFamily="@font/nanum_barungothic_light"
-            android:textSize="21sp"
-            android:textColor="@color/black"
-            android:layout_marginTop="8dp"/>
-    </RelativeLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="이메일"
-        android:includeFontPadding="false"
-        android:fontFamily="@font/nanumbarungothic"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:layout_marginLeft="20dp"/>
-    <EditText
-        android:id="@+id/signup_login_edit_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="36dp"
-        android:layout_marginTop="20dp"
-        android:hint="artic@gmail.com"
-        android:layout_marginLeft="20dp"
-        android:theme="@style/EditTheme"
-        android:textSize="14sp"
-        android:fontFamily="@font/nanum_barungothic_light"
-        android:includeFontPadding="false"
-        android:lineSpacingExtra="2sp"
-        android:singleLine ="true"
-        android:nextFocusDown="@id/signup_login_edit_password"/>
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -124,55 +55,65 @@
 
         <TextView
             android:id="@+id/tv_act_signup_login_email_check_success"
+            style="@style/Text.NanumL.12s.SoftBlue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="사용하실 수 있는 이메일입니다"
-            android:textSize="12sp"
-            android:textColor="@color/soft_blue"
-            android:fontFamily="@font/nanum_barungothic_light"
-            android:includeFontPadding="false"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/tv_act_signup_login_email_check_fail"
+            style="@style/Text.NanumL.12s.Red"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="이메일 형식에 맞게 입력하세요"
-            android:textSize="12sp"
-            android:textColor="#ff1515"
-            android:fontFamily="@font/nanum_barungothic_light"
-            android:includeFontPadding="false"/>
-
+            android:text="이메일 형식에 맞게 입력하세요" />
     </RelativeLayout>
 
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="비밀번호"
-        android:includeFontPadding="false"
-        android:layout_marginTop="40dp"
-        android:fontFamily="@font/nanumbarungothic"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:layout_marginLeft="20dp" />
-
-    <EditText
-        android:id="@+id/signup_login_edit_password"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="36dp"
-        android:layout_marginTop="20dp"
-        android:inputType="textPassword"
-        android:hint="영문,숫자 포함 8자리 이상"
-        android:layout_marginLeft="20dp"
-        android:theme="@style/EditTheme"
-        android:textSize="14sp"
-        android:fontFamily="@font/nanum_barungothic_light"
-        android:includeFontPadding="false"
-        android:lineSpacingExtra="2sp"
-        android:singleLine ="true" />
+        android:paddingLeft="20dp"
+        android:paddingTop="32dp"
+        android:paddingBottom="74dp">
+
+        <TextView
+            android:id="@+id/email_txt"
+            style="@style/Text.NanumB.21s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="이메일" />
+
+        <TextView
+            android:id="@+id/signup_login_txt1"
+            style="@style/Text.NanumL.21s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/email_txt"
+            android:text="과 " />
+
+        <TextView
+            android:id="@+id/password_txt"
+            style="@style/Text.NanumB.21s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/signup_login_txt1"
+            android:text="비밀번호" />
+
+        <TextView
+            style="@style/Text.NanumL.21s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/password_txt"
+            android:text="를" />
+
+        <TextView
+            style="@style/Text.NanumL.21s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/email_txt"
+            android:layout_marginTop="8dp"
+            android:text="알려주세요!" />
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -181,29 +122,38 @@
 
         <TextView
             android:id="@+id/tv_act_signup_login_password_check_success"
+            style="@style/Text.NanumL.12s.SoftBlue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="사용하실 수 있는 형식입니다"
-            android:textSize="12sp"
-            android:textColor="@color/soft_blue"
-            android:fontFamily="@font/nanum_barungothic_light"
-            android:includeFontPadding="false"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/tv_act_signup_login_password_check_fail"
+            style="@style/Text.NanumL.12s.Red"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="영문, 숫자 포함 8자리 이상의 비밀번호를 입력하세요"
-            android:textSize="12sp"
-            android:textColor="#ff1515"
-            android:fontFamily="@font/nanum_barungothic_light"
-            android:includeFontPadding="false"
-            android:visibility="visible"/>
-
+            android:visibility="visible" />
     </RelativeLayout>
 
+    <TextView
+        style="@style/Text.NanumR.16s"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:text="이메일" />
 
+    <TextView
+        style="@style/Text.NanumR.16s"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="40dp"
+        android:text="비밀번호" />
 
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.3dp"
+        android:background="#d1d1d1" />
 </LinearLayout>
