--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,16 +7,15 @@
     tools:context=".ui.splash.SplashActivity">
 
     <com.airbnb.lottie.LottieAnimationView
-        android:scaleType="centerCrop"
         android:id="@+id/lottie_splash"
-        app:lottie_rawRes="@raw/splash"
-        app:lottie_loop="false"
-        app:lottie_autoPlay="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="false"
+        app:lottie_rawRes="@raw/splash" />
 </androidx.constraintlayout.widget.ConstraintLayout>
