--- a/app/src/main/res/layout/dialog_put_archive.xml
+++ b/app/src/main/res/layout/dialog_put_archive.xml
@@ -1,107 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignParentBottom="true"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="내 아카이브"
-            android:textColor="#000000"
-            android:textSize="14sp"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:includeFontPadding="false"
-            android:layout_centerInParent="true"/>
-
         <ImageButton
             android:id="@+id/ibtn_dialog_put_archive_new_archive"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn_plus"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginRight="20dp"
+            android:background="@drawable/btn_plus" />
 
+        <TextView
+            style="@style/Text.NanumR.14s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="내 아카이브" />
     </RelativeLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="#cdcdcd"/>
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:id="@+id/linear_dialog_put_archive_make_new_archive"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="27dp"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/btn_archiveselect_plus" />
+
+                <View
+                    android:layout_width="78dp"
+                    android:layout_height="78dp"
+                    android:background="@drawable/archive_make_card" />
+            </RelativeLayout>
+
+            <TextView
+                style="@style/Text.NanumR.12s"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginTop="10dp"
+                android:text="아카이브 만들기" />
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_dialog_put_archive_my_archive_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="13dp">
-
-        </androidx.recyclerview.widget.RecyclerView>
-
-        <LinearLayout
-            android:id="@+id/linear_dialog_put_archive_make_new_archive"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginBottom="27dp">
-
-           <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <View
-                    android:layout_width="78dp"
-                    android:layout_height="78dp"
-                    android:background="@drawable/archive_make_card"/>
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/btn_archiveselect_plus"
-                    android:layout_centerInParent="true"/>
-
-            </RelativeLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="아카이브 만들기"
-                android:textColor="#000000"
-                android:textSize="12sp"
-                android:fontFamily="@font/nanum_barungothic_regular"
-                android:includeFontPadding="false"
-                android:layout_gravity="center_vertical"
-                android:layout_marginTop="10dp"/>
-
-        </LinearLayout>
-
+            android:layout_marginBottom="13dp" />
     </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#cdcdcd" />
 
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="#cdcdcd"/>
+        android:background="#cdcdcd" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_rv_dialog_put_archive_complete"
+        style="@style/Text.NanumR.16s"
         android:layout_width="match_parent"
         android:layout_height="57dp"
         android:background="@color/artic_transparent"
-        android:text="취소"
-        android:textColor="@color/black"
-        android:textSize="15sp"
-        android:fontFamily="@font/nanum_barungothic_regular"
-        android:includeFontPadding="false"/>
-
+        android:text="취소" />
 </LinearLayout>
