--- a/app/src/main/res/layout/fragment_category_archive.xml
+++ b/app/src/main/res/layout/fragment_category_archive.xml
@@ -6,35 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.category_archive.CategoryArchiveFragment">
 
-
     <LinearLayout
         android:id="@+id/linear_fragment_category_archive_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginStart="20dp"
+        android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/txt_category_archive_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/avenir_next_bold"
-            android:includeFontPadding="false"
-            tools:text="Design"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:layout_gravity="center_vertical"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/btn_rightarrow"/>
+            android:src="@drawable/btn_rightarrow" />
 
-
+        <TextView
+            android:id="@+id/txt_category_archive_name"
+            style="@style/Text.AvenirB.18s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            tools:text="Design" />
     </LinearLayout>
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_category_archive"
