--- a/app/src/main/res/layout/fragment_home_new_article.xml
+++ b/app/src/main/res/layout/fragment_home_new_article.xml
@@ -12,31 +12,22 @@
         android:layout_marginLeft="20dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:includeFontPadding="false"
-            android:text="새로운 아티클"
-            android:textColor="#191919"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/btn_rightarrow" />
 
+        <TextView
+            style="@style/Text.NanumB.18s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="새로운 아티클" />
     </LinearLayout>
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_frag_home_new_article"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
+        android:layout_marginTop="16dp" />
 </LinearLayout>
