--- a/app/src/main/res/layout/fragment_my_page_me.xml
+++ b/app/src/main/res/layout/fragment_my_page_me.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,20 +7,14 @@
     tools:context=".ui.mypage.mypage.MyPageMeFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_margin="10dp"
         android:id="@+id/rv_mypage_me"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible">
+        android:layout_margin="10dp"
+        android:visibility="visible" />
 
-    </androidx.recyclerview.widget.RecyclerView>
-
-        <include
-            android:visibility="gone"
-            android:id="@+id/mypage_my_empty_view"
-            layout="@layout/mypage_my_empty"/>
-
-
-
-
+    <include
+        android:id="@+id/mypage_my_empty_view"
+        layout="@layout/mypage_my_empty"
+        android:visibility="gone" />
 </LinearLayout>
