--- a/app/src/main/res/layout/fragment_new_archive.xml
+++ b/app/src/main/res/layout/fragment_new_archive.xml
@@ -10,29 +10,23 @@
         android:id="@+id/linear_fragment_new_archive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="20dp">
-
-        <TextView
-            android:id="@+id/txt_archive_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:includeFontPadding="false"
-            android:textStyle="bold"
-            android:text="@string/new_archive"
-            android:textColor="#191919"
-            android:textSize="18sp"
-            android:layout_gravity="center_vertical"/>
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/btn_rightarrow"/>
+            android:src="@drawable/btn_rightarrow" />
 
-
+        <TextView
+            android:id="@+id/txt_archive_label"
+            style="@style/Text.NanumB.18s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="@string/new_archive" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
