--- a/app/src/main/res/layout/my_page_tablayout.xml
+++ b/app/src/main/res/layout/my_page_tablayout.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:orientation="horizontal">
@@ -11,21 +10,6 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/txt_my_page_tablayout_scrap"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:text="스크랩"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:includeFontPadding="false"
-            android:layout_marginStart="13dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-             />
-
         <ImageView
             android:id="@+id/img_my_page_tablayout_scrap"
             android:layout_width="5dp"
@@ -34,28 +18,23 @@
             app:layout_constraintBottom_toTopOf="@+id/txt_my_page_tablayout_scrap"
             app:layout_constraintStart_toEndOf="@+id/txt_my_page_tablayout_scrap"
             app:srcCompat="@drawable/btn_blue_round" />
+
+        <TextView
+            android:id="@+id/txt_my_page_tablayout_scrap"
+            style="@style/Text.NanumB.14s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="13dp"
+            android:text="스크랩"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/my_page_tablayout_me"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-
-        >
-
-        <TextView
-            android:id="@+id/txt_my_page_tablayout_me"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:text="내 아카이브"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:includeFontPadding="false"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-             />
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/img_my_page_tablayout_me"
@@ -65,5 +44,15 @@
             app:layout_constraintBottom_toTopOf="@+id/txt_my_page_tablayout_me"
             app:layout_constraintStart_toEndOf="@+id/txt_my_page_tablayout_me"
             app:srcCompat="@drawable/btn_blue_round" />
+
+        <TextView
+            android:id="@+id/txt_my_page_tablayout_me"
+            style="@style/Text.NanumB.14s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="내 아카이브"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
