--- a/app/src/main/res/layout/mypage_my_empty.xml
+++ b/app/src/main/res/layout/mypage_my_empty.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent" 
-    android:layout_height="match_parent">
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/mypage_myarchive_create_btn"
@@ -23,21 +20,15 @@
             android:layout_height="30dp"
             android:layout_centerInParent="true"
             android:src="@drawable/btn_mypage_plus_big" />
-
-
     </RelativeLayout>
 
     <TextView
+        style="@style/Text.NanumR.14s"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="12dp"
-        android:fontFamily="@font/nanum_barungothic_regular"
-        android:includeFontPadding="false"
         android:text="내 아카이브 만들기"
-        android:textColor="@color/black"
-        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mypage_myarchive_create_btn" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
