--- a/app/src/main/res/layout/rv_archive_category_card.xml
+++ b/app/src/main/res/layout/rv_archive_category_card.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
-    android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/search_search_word_card"
-    android:paddingTop="5dp" android:paddingBottom="5dp" android:paddingRight="10dp" android:paddingLeft="10dp"
-    android:layout_marginRight="6dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginRight="6dp"
+    android:background="@drawable/search_search_word_card"
+    android:orientation="vertical"
+    android:paddingLeft="10dp"
+    android:paddingTop="5dp"
+    android:paddingRight="10dp"
+    android:paddingBottom="5dp">
 
     <TextView
         android:id="@+id/tv_rv_archive_category_card_category"
+        style="@style/Text.NanumR.12s.BrownishGrey"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="UX / UI"
-        android:textColor="#707070"
-        android:textSize="12sp"
-        android:fontFamily="@font/nanum_barungothic_regular"
-        android:includeFontPadding="false"/>
-
-
+        android:text="UX / UI" />
 </LinearLayout>
