--- a/app/src/main/res/layout/rv_item_archive_card.xml
+++ b/app/src/main/res/layout/rv_item_archive_card.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
+
     <androidx.cardview.widget.CardView
         android:layout_width="177dp"
         android:layout_height="239dp"
@@ -19,43 +20,36 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/archive_card_round"
+                android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@tools:sample/avatars"
-                android:scaleType="centerCrop"/>
+                tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
                 android:id="@+id/txt_rv_item_archive_card_category"
+                style="@style/Text.AvenirB.13s.20h.White"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="13dp"
-                android:fontFamily="@font/avenir_next_bold"
-                android:lineSpacingExtra="7sp"
-                android:textColor="@color/white"
-                android:textSize="13sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Management" />
 
             <TextView
                 android:id="@+id/txt_rv_item_archive_card_title"
+                style="@style/Text.NanumR.14s.23h.White"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="36dp"
                 android:layout_marginBottom="17dp"
-                android:fontFamily="@font/nanum_barungothic_regular"
-                android:includeFontPadding="false"
-                android:lineSpacingExtra="6sp"
-                android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:text="디자이너와 PM이 서로 소통할 수 있는 방법을 알려주세요" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </FrameLayout>
