--- a/app/src/main/res/layout/rv_item_archive_select_my_archive.xml
+++ b/app/src/main/res/layout/rv_item_archive_select_my_archive.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
-    android:layout_width="78dp" android:layout_height="116dp"
-    android:id="@+id/relative_rv_item_archive_select_my_archive">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relative_rv_item_archive_select_my_archive"
+    android:layout_width="78dp"
+    android:layout_height="116dp"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/img_rv_item_archive_select_my_archive"
         android:layout_width="78dp"
         android:layout_height="78dp"
-        android:src="#000000"
         android:background="@drawable/archive_card_round"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:src="#000000" />
 
     <RelativeLayout
         android:id="@+id/relative_rv_item_archive_select_my_archive_select"
@@ -22,30 +25,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/archive_card_round"
-            android:src="@color/soft_blue"/>
+            android:src="@color/soft_blue" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon_check"
-            android:layout_centerInParent="true"/>
-
+            android:layout_centerInParent="true"
+            android:src="@drawable/icon_check" />
     </RelativeLayout>
-    
+
     <TextView
         android:id="@+id/tv_rv_item_archive_select_my_archive_name"
+        style="@style/Text.NanumL.12s"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/img_rv_item_archive_select_my_archive"
         android:layout_centerHorizontal="true"
-        android:lineSpacingExtra="2sp"
-        android:text="으아아아"
-        android:textSize="12sp"
-        android:textColor="#000000"
-        android:fontFamily="@font/nanum_barungothic_light"
-        android:includeFontPadding="false"
         android:layout_marginLeft="7dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="7dp"
-        android:layout_marginTop="10dp"/>
-
+        tools:text="으아아아" />
 </RelativeLayout>
