--- a/app/src/main/res/layout/rv_item_category.xml
+++ b/app/src/main/res/layout/rv_item_category.xml
@@ -9,15 +9,12 @@
 
     <TextView
         android:id="@+id/txt_rv_item_category_name"
+        style="@style/Text.AvenirB.21s"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:fontFamily="@font/avenir_next_bold"
-        android:includeFontPadding="false"
-        android:text="Design"
-        android:textColor="@color/black"
-        android:textSize="21sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Design" />
 </androidx.constraintlayout.widget.ConstraintLayout>
