--- a/app/src/main/res/layout/rv_item_mypage_scrap.xml
+++ b/app/src/main/res/layout/rv_item_mypage_scrap.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/rv_item_mypage_scrap_container"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rv_item_mypage_scrap_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -19,37 +18,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/rv_item_mypage_scrap_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/avenir_next_bold"
-            android:includeFontPadding="false"
-            android:textColor="@color/white"
-            android:textSize="13sp"
-            app:layout_constraintStart_toStartOf="@+id/rv_item_mypage_scrap_img"
-            app:layout_constraintTop_toTopOf="@+id/rv_item_mypage_scrap_img"
-            tools:text="Management" />
+    <TextView
+        android:id="@+id/rv_item_mypage_scrap_title"
+        style="@style/Text.AvenirB.13s.20h.White"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="@+id/rv_item_mypage_scrap_img"
+        app:layout_constraintTop_toTopOf="@+id/rv_item_mypage_scrap_img"
+        tools:text="Management" />
 
     <TextView
         android:id="@+id/rv_item_mypage_scrap_txt"
+        style="@style/Text.NanumR.14s.23h.White"
         android:layout_width="0dp"
         android:layout_height="99dp"
         android:layout_below="@id/rv_item_mypage_scrap_title"
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="20dp"
-        android:fontFamily="@font/nanum_barungothic_regular"
-        android:includeFontPadding="false"
-        android:lineSpacingExtra="6sp"
-        android:text="팀을 훌륭하게 이끄는 멋진 리더가 되려면 어떻게 해야할까요?"
-        android:textColor="@color/white"
-        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/rv_item_mypage_scrap_img"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rv_item_mypage_scrap_title" />
-
+        app:layout_constraintTop_toBottomOf="@+id/rv_item_mypage_scrap_title"
+        tools:text="팀을 훌륭하게 이끄는 멋진 리더가 되려면 어떻게 해야할까요?" />
 </androidx.constraintlayout.widget.ConstraintLayout>
