--- a/app/src/main/res/layout/toolbar_list.xml
+++ b/app/src/main/res/layout/toolbar_list.xml
@@ -1,26 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    app:contentInsetStart="0dp"
-    >
+    app:contentInsetStart="0dp">
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="64dp"
-        >
+        android:layout_height="64dp">
 
         <TextView
             android:id="@+id/txt_toolbar_review_title"
-            android:text="UI/UX"
+            style="@style/Text.NanumB.18s"
             android:layout_width="46dp"
             android:layout_height="19dp"
             android:layout_centerInParent="true"
-            android:textSize="17sp"
-            android:textStyle="bold"
-            android:textColor="@color/black"/>
-
+            android:text="UI/UX" />
     </RelativeLayout>
 </androidx.appcompat.widget.Toolbar>
